# Habit-Tracker

./: .env.example  .pylintrc  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: manage.py
backend/days/: admin.py  urls.py  views.py
backend/days/factories/: __init__.py  day_factory.py  day_habit_factory.py
backend/days/migrations/: 0003_dayhabit_day_habits.py
backend/days/tests/: test_list_days.py
backend/days/use_cases/: __init__.py  check_day_habit.py  list_days.py
backend/django_root/: asgi.py  settings.py  urls.py
backend/habits/: apps.py  urls.py  views.py
backend/habits/errors/: __init__.py  habit_did_not_start_yet.py  habit_does_not_exist.py
backend/habits/factories/: __init__.py  habit_factory.py
backend/habits/migrations/: 0001_create_model_habit.py
backend/habits/serializers/: habit_serializer.py
backend/habits/use_cases/: __init__.py  list_date_habits.py
backend/seeds/: days.json  habits.json
frontend/: .env.example  index.html  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: axios.ts
frontend/src/interfaces/: api.ts  models.ts
frontend/src/services/: DayService.ts  HabitService.ts
frontend/src/utils/: date.ts
server/: manage.py
server/days/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
server/django_root/: wsgi.py
server/habitTracker/: asgi.py  settings.py  urls.py  wsgi.py
server/habit_tracker/: asgi.py  errors.py  settings.py  urls.py  wsgi.py
server/habits/: admin.py  models.py  serializers.py  urls.py  views.py
(+59 files in other folders)
