[tool.poetry]
name = "habit-tracker"
version = "1.0.0"
description = ""
authors = ["João Victor Garcia Coelho"]
readme = "README.md"
packages = [{include = "habit-tracker", lib="backend"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.2"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
faker = "^18.11.2"
psycopg2-binary = "^2.9.6"
black = "^23.3.0"
pylint = "^2.17.4"
pylint-django = "^2.5.3"
pylint-plugin-utils = "^0.8.2"
typing-extensions = "^4.7.0"
django-cors-headers = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
